--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,261 @@
-.App {
-  text-align: center;
+:root {
+  --primary-green: #495E57;
+  --primary-yellow: #F4CE14;
+  --secondary-salmon: #EE9912;
+  --secondary-peach: #FBDABB;
+  --highlight-gray: #EDEFEE;
+  --highlight-black: #333333;
+  font-size: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  font-family: Karla, sans-serif;
+  font-size: 1.8em;
+  line-height: 1.5;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
+}
+
+a:active {
+  color: var(--primary-yellow);
+}
+
+a:hover,
+a:focus {
+  outline: none;
+  border-bottom: 2px var(--primary-yellow) solid;
+}
+
+h1, h2 {
+  font-family: 'Markazi Text', serif;
+}
+
+button {
+  background-color: var(--primary-yellow);
+  border: none;
+  padding: 0.8em 1.5em;
+  font-family: inherit;
+  font-size: 1em;
+  font-weight: bold;
+  border-radius: 16px;
+  transition: all 0.5s ease-in;
+  cursor: pointer;
+}
+
+button:hover,
+button:focus {
+  outline: none;
+  filter: saturate(200%);
+}
+
+button:active {
+  transform: scale(0.95);
+}
+
+/* NAV ///////////////////////////////////////////// */
+header {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  background-color: #fff;
+  padding: 1.2em 6em;
+  top: 0;
+  position: fixed;
+}
+
+.nav-container {
+  width: 90%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2em;
+}
+
+.nav-container img {
+  width: 10em;
+}
+
+.nav-container .nav-links {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1.5em;
+}
+
+.nav-links a {
+  font-weight: bold;
+  transition: color 0.5s ease-in-out;
+}
+
+/* HERO ///////////////////////////////////////// */
+main {
+  display: flex;
+  justify-content: center;
+  background-color: var(--primary-green);
+  padding: 12em 6em 3em 6em;
+  width: 100%;
+  font-family: 'Markazi Text', serif;
+}
+
+.hero-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1em;
+  width: 90%;
+}
+
+.hero-info {
+  /* background-color: gray; */
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
+  gap: 0.5rem;
+  color: #fff;
+  font-family: Karla, sans-serif;
+  max-width: 65ch;
+}
+
+.hero-info h1 {
+  font-size: 4em;
+  line-height: 0.8;
+  color: var(--primary-yellow);
+}
+
+.hero-info h2 {
+  margin-bottom: 0.5em;
+  font-size: calc(4em / 2);
+}
+
+.hero-info button {
+  margin-top: 0.5em;
+}
+
+.hero-img img {
+  width: 100%;
+  max-width: 300px;
+  border-radius: 16px;
+}
+
+/* SPECIALS //////////////////////// */
+.specials-container {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  padding: 5em 6em;
+  background-color: #fff;
 }
 
-.App-link {
-  color: #61dafb;
+.specials-heading {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1em;
+  width: 90%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.specials-heading h2 {
+  font-size: 4em;
+}
+
+.specials-cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  padding: 3em 0;
+  gap: 1em;
+  width: 90%;
+}
+
+.specials-card > *:not(img) {
+  padding: 1.2em 1.5em;
+}
+
+.specials-card {
+  display: flex;
+  flex-direction: column;
+  width: 350px;
+  border-radius: 16px;
+  padding-bottom: 0.8em;
+  background-color: var(--highlight-gray);
+}
+
+.specials-card img {
+  width: 100%;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+}
+
+.specials-card-heading {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.specials-card-heading h4 {
+  font-family: "Markazi Text", serif;
+  font-size: 1.4em;
+  font-weight: bold;
+}
+
+.specials-card-heading p {
+  color: var(--secondary-salmon);
+}
+
+.specials-card a:last-child {
+  font-weight: bold;
+}
+
+/* FOOTER ///////////////////////// */
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background-color: var(--primary-green);
+  padding: 6em;
+  padding-bottom: 2em;
+  gap: 5em;
+}
+
+.footer-container {
+  width: 90%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 3em;
+}
+
+.footer-container img {
+  width: 40%;
+}
+
+.footer-links-groups {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 6em;
+}
+
+small span {
+  font-weight: bold;
 }
