--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   font-size: 10px;
 }
 
-* {
+*, *::before, *::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -48,12 +48,12 @@ a {
   color: #000;
 }
 
-a:active {
+a:not(.confirmation-calendar):active {
   color: var(--primary-yellow);
 }
 
-a:hover,
-a:focus {
+a:not(.confirmation-calendar):hover,
+a:not(.confirmation-calendar):focus {
   outline: none;
   border-bottom: 2px var(--primary-yellow) solid;
 }
@@ -76,7 +76,7 @@ p {
   max-width: 65ch;
 }
 
-button {
+button, input[type="submit"] {
   border: none;
   border-radius: 16px;
   padding: 0.8em 1.5em;
@@ -96,6 +96,101 @@ button:focus {
 
 button:active {
   transform: scale(0.95);
+}
+
+/* FORM STYLING /////////////////////////////////// */
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 2em;
+}
+
+.form-details {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 2em;
+  margin-top: 1em;
+}
+
+.form-field {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2em;
+}
+
+.form-field select,
+.form-field .form-required-field {
+  flex: 1;
+}
+
+.form-field.form-terms {
+  align-self: flex-end;
+  font-size: 1.2rem;
+  gap: 0;
+}
+
+.form-terms input {
+  width: 5rem;
+  accent-color: var(--primary-green);
+}
+
+input,
+select {
+  padding: 1rem;
+  border: 1px solid #000;
+  border-radius: 1rem;
+  font-family: inherit;
+  font-size: 1.6rem;
+  width: 100%;
+}
+
+select {
+  background-color: var(--highlight-gray);
+}
+
+input[type="text"] {
+  cursor: text;
+}
+
+input[type="submit"] {
+  margin-top: 1em;
+  align-self: flex-end;
+  border: none;
+  width: 50%;
+}
+
+input:focus,
+select:focus {
+  outline: none;
+  border: 2px solid var(--primary-yellow);
+}
+
+input[type="submit"]:disabled {
+  background-color: var(--highlight-gray);
+  cursor: not-allowed;
+}
+
+.invalid-input {
+  border: 2px solid red;
+}
+
+.error-msg {
+  color: red;
+  font-style: italic;
+  font-size: 1.2rem;
+  margin-top: 0;
+}
+
+.invalid-input:focus + .error-msg {
+  display: none;
+}
+
+sup {
+  color: red;
 }
 
 /* NAV ///////////////////////////////////////////// */
@@ -392,3 +487,98 @@ footer span {
   width: 100%;
 }
 
+/* BOOKING PAGE ///////////////////// */
+.booking-container {
+  padding-top: 10em;
+}
+
+.booking-container .content-wrapper {
+  justify-content: center;
+}
+
+/* BOOKING CONFIRMATION PAGE ////////////////////////////// */
+.confirmation-container {
+  background-color: var(--primary-green);
+  color: #fff;
+  padding-block: 10em 5em;
+  min-height: 100vh;
+}
+
+.confirmation-container .content-wrapper {
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 4em;
+}
+
+.confirmation-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2em;
+  padding: 4em 2em;
+  padding-bottom: 1.5em;
+  border-radius: 1.6rem;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.confirmation-card iframe {
+  border: 0;
+  max-width: 100%;
+  transition: all 0.8s ease-in-out;
+}
+
+.confirmation-card iframe:hover {
+  opacity: 0.8;
+  transform: scale(0.98);
+}
+
+.confirmation-card .confirmation-heading {
+  text-align: center;
+}
+
+.confirmation-card .confirmation-heading h2 {
+  line-height: 1.2;
+}
+
+.confirmation-card .confirmation-heading span {
+  color: var(--primary-yellow);
+}
+
+.confirmation-card .confirmation-details {
+  align-self: flex-start;
+}
+
+.confirmation-card .confirmation-details .confirmation-detail {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 0.5em;
+}
+
+.confirmation-card .confirmation-calendar {
+  align-self: flex-end;
+  font-size: 3.2rem;
+  color: var(--primary-yellow);
+  transition: all 1s ease-in-out;
+}
+
+.confirmation-card .confirmation-calendar:hover,
+.confirmation-card .confirmation-calendar:focus {
+  color: #fff;
+  transform: scale(1.3);
+}
+
+.confirmation-container .content-wrapper .confirmation-terms {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1em;
+  font-size: 1.6rem;
+}
+
+.confirmation-container .content-wrapper .confirmation-terms a {
+  color: #fff;
+}
